--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -8,6 +8,9 @@ dependencies:
   flutter:
     sdk: flutter
 
+  cupertino_back_gesture:
+    path: ../
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
