--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,5 +1,5 @@
 name: example
-description: A new Flutter application.
+description: Cupertino Back Gesture example app
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
